--- a/JamiatAhleHadees/Areas/User/Views/BoardMember/Index.cshtml
+++ b/JamiatAhleHadees/Areas/User/Views/BoardMember/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@model IEnumerable<CommonLayer.CommonModels.BoardRequestProcess>
-@{
+﻿@model IEnumerable<CommonLayer.CommonModels.BoardMember>
+    @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/User/Views/Shared/_LayoutPage1.cshtml";
-}
+    }
 
-<h2>Index</h2>
+    <h2>Index</h2>
 
