--- a/JamiatAhleHadees/Areas/User/Views/ExistingMadarsaOperaion/Index.cshtml
+++ b/JamiatAhleHadees/Areas/User/Views/ExistingMadarsaOperaion/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable < CommonLayer.CommonModels.ExistingMadarsaOperation>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/User/Views/Shared/_LayoutPage1.cshtml";
